--- a/Register/Log in/main/main.html
+++ b/Register/Log in/main/main.html
@@ -54,7 +54,7 @@
                             <a class="nav-link" href="http://127.0.0.1:5502/menu/menu.html">Menu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#voucher">Voucher</a>
+                            <a class="nav-link" href="http://127.0.0.1:5502/voucher/voucher.html">Voucher</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="http://127.0.0.1:5502/Register/register.html">Register</a>
