--- a/Register/register.html
+++ b/Register/register.html
@@ -31,38 +31,24 @@
             <span class="details">Phone Number</span>
             <input type="text" name="phoneNumber" placeholder="Enter your number" required>
           </div>
-          <div class="input-box">
+          <!-- <div class="input-box">
             <span class="details">Password</span>
             <input type="text" name="password" placeholder="Enter your password" required>
+          </div> -->
+          <div class="input-box password-box">
+            <span class="details">Password</span>
+            <input type="password" id="password" placeholder="Enter your password">
+            <span class="eye" id="eye" onclick="togglePassword()">👁</span>
           </div>
           <div class="input-box">
             <span class="details">Confirm Password</span>
             <input type="text" name="confirmPassword" placeholder="Confirm your password" required>
           </div>
         </div>
-        <div class="gender-details">
-          <input type="radio" name="gender" id="dot-1" value="Male">
-          <input type="radio" name="gender" id="dot-2" value="Female">
-          <input type="radio" name="gender" id="dot-3" value="Prefer not to say">
-          <span class="gender-title">Gender</span>
-          <div class="category">
-            <label for="dot-1">
-              <span class="dot one"></span>
-              <span class="gender">Male</span>
-            </label>
-            <label for="dot-2">
-              <span class="dot two"></span>
-              <span class="gender">Female</span>
-            </label>
-            <label for="dot-3">
-              <span class="dot three"></span>
-              <span class="gender">Prefer not to say</span>
-            </label>
-          </div>
-        </div>
         <div class="button">
           <input type="submit" value="Register">
         </div>
+        <a href="http://127.0.0.1:5502/Log%20in/login.html">(*)Already had account?</a>
       </form>
     </div>
   </div>
